# qml-orientation-demo

./: .gitignore  CMakeLists.txt  LICENSE  clickable.json  main.cpp  main.qml  orientationHelper.js  qml.qrc
click/: CMakeLists.txt  manifest.json.in  qml-orientation-demo-not-rotated.desktop  qml-orientation-demo.desktop
pages/: LicensePage.qml  OrientationPage.qml
